# mdb-index-sync

./: Makefile  README.md  requirements.txt  setup.cfg  setup.py
mdb_index_sync/: __main__.py
