[metadata]
name = MDB-Index-Sync
version = 0.0.1
license = "BSD"
author = Dave Sayles
author_email = sayles.dave@gmail.com
description = Sync indexes from one MDB instance to another
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dgs3/mdb-index-sync
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.3
